# control-lab-ly

./: .gitignore  .readthedocs.yaml  404.html  ATTRIBUTIONS.html  CHANGELOG.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  DMA_test.csv  Dockerfile  LICENSE.html  LICENSE.md  MANIFEST.in  README.md  Reference Guide.pyw  compose.yaml  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt  sartorius calib 1-0-100uL.csv  sartorius calib 3 - 50uL.csv  sartorius calib 4.csv  sartorius calib 5-2-100uL.csv  setup.cfg  setup.py  setup0.py  testing_ground.py  thermo scientific manual.csv  tox.ini
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: docs.yml  release.yml  tests.yml
controllable/: MANIFEST.in  __init__.py
controllable/Analyse/Processor/: video_processor.py
controllable/Analyse/Visualisation/: dash_app.py  visualisation_utils.py
controllable/Compound/LiquidMover/: liquidmover_utils.py
controllable/Control/GUI/: __init__.py  basic_panels.py  gui_utils.py
controllable/Control/Schedule/: schedule_utils.py
controllable/Make/: __init__.py
controllable/Measure/: __init__.py
controllable/Move/: __init__.py  mover_utils.py
controllable/Transfer/: __init__.py
controllable/View/: __init__.py  image_utils.py  thermal_cam.py  view_utils.py
controllable/builds/: build_utils.py  mySetup.py  registry.yaml
controllable/misc/: __init__.py  decorators.py  layout_utils.py  misc_utils.py
controllably/: __init__.py  __main__.py  _log_filters.py  requirements.txt
controllably/Compound/: __init__.py  compound_utils.py
controllably/GUI/: __init__.py  gui.py  move_gui.py  transfer_gui.py  view_gui.py
controllably/Make/: __init__.py  make.py  make_utils.py
controllably/Measure/: __init__.py  instrument_utils.py  measure.py  measure_utils.py  program_utils.py
controllably/Move/: __init__.py  gcode.py  gcode_utils.py  move.py  move_utils.py  mover_utils.py
controllably/View/: __init__.py  camera.py  image.py  image_utils.py  placeholder.py  view_utils.py
controllably/core/: __init__.py  _device_copy.py  compound.py  connection.py  control.py  datalogger.py  device.py  factory.py  file_handler.py  gui.py  interpreter.py  logging.py  notification.py  position.py  safety.py
controllably/misc/: __init__.py  compound.py  connection.py  connections.py  decorators.py  factory.py  helper.py  layout.py  layout_utils.py  logger.py  misc_utils.py  position.py
data/testing/: LSV_test.csv  biologic_test.csv  biologic_test3.csv
dev/: Dockerfile  compose.yaml  local_install.txt  message.proto  requirements.txt  requirements_all.txt  requirements_app.txt  requirements_dev.txt  setup.cfg  tox.ini
docs/: ATTRIBUTIONS.md  CHANGELOG.md  README.md
docs/site/: advanced_usage.md  overview.md
examples/Labware/: layout.json  opentrons_96_tiprack_1000ul.json  sartorious_robotic_96_tiprack_1000ul.json
resources/: other python libraries.txt
resources/Sartorius/: Sartorius serial.py
scripts/: __sandbox__.py  _test_client_socket.py  _test_hub.py  _test_server_socket.py  _test_socket.py  _test_ui.py  _test_user.py  _test_worker.py  control_utils.py  fastapi_client_user.py  fastapi_client_worker.py  fastapi_server.py  socket_client_user.py  socket_client_worker.py  socket_server_worker.py  start_fastapi_server.py  start_socket_hub_server.py  test_init.py
scripts/Make/: test_mixture_shaker.py
scripts/Measure/: test_mechanical_piezorobotics.py  test_sentron.py
scripts/Move/: test_cartesian_primitiv v2.py  test_cartesian_primitiv.py
scripts/Transfer/: test_liquid_syringe_assembly.py  test_liquid_tricontinent.py  test_pump_peristaltic.py
scripts/View/: test_camera_optical.py
scripts/gui/: _test_ui.py
scripts/sila_demo/: client.py  demo_sartorius.xml  server.py
search/: search_index.js  search_index.json
site/: advanced_usage.html  index.html  overview.html
site/api/: reference_nav.yaml
site/scripts/: generate_markdown.py  update_mkdocs_config.py
src/: tree.txt
src/setups/: main.py
src/utils/: templates.py  tool_utils.py  toolutils.py
tests/: __sandbox__.py  context.py  test_camera_optical.py  test_camera_thermal.py  test_cartesian_ender.py  test_cartesian_primitiv v2.py  test_cartesian_primitiv.py  test_compound_liquidmover.py  test_compound_spin_printer.py  test_dobot_m1pro.py  test_dobot_mg400.py  test_electrical_keithley.py  test_film_spin.py  test_heat_peltier.py  test_init.py  test_light_led_array.py  test_liquid_sartorius.py  test_liquid_syringe_assembly.py  test_liquid_tricontinent.py  test_mechanical_piezorobotics.py  test_mixture_shaker.py  test_panels.py  test_physical_balance.py
tests/Compound/: test_cartesian_open_pipette.py  test_clamp.py  test_compound_liquidmover.py  test_compound_spin_printer.py  test_fet_measurement.py  test_force_clamper.py  test_stress_eis.py
tests/Control/: init.py  test_basic_panel.py  test_nicegui.py  test_panels.py
tests/Make/: test_film_spin.py  test_heat_peltier.py  test_light_led_array.py  test_mixture_shaker.py
tests/Measure/: test_electrical_6510.py  test_electrical_keithley.py  test_load_cell.py  test_mechanical_piezorobotics.py
tests/Move/: test_cartesian_ender.py  test_cartesian_primitiv v2.py  test_cartesian_primitiv.py  test_dobot_m1pro.py  test_dobot_mg400.py  test_gantry.py  test_m1pro.py  test_mg400.py
tests/Transfer/: init.py  test_liquid_sartorius.py  test_liquid_syringe_assembly.py  test_liquid_tricontinent.py  test_pump_peristaltic.py
tests/View/: test_camera.py  test_camera_optical.py  test_camera_thermal.py
tests/configs/: m1pro.yaml  primitiv2.yaml  skwr.yaml  spin_printer.yaml
tests/core/: test_compound.py  test_connection.py  test_control.py  test_datalogger.py  test_device.py  test_factory.py  test_file_handler.py  test_interpreter.py  test_notification.py  test_position.py  test_safety.py
tests/examples/: test_socket_control.py
tests/files/: deck_sample big.json  deck_sample duo.json  deck_sample small.json  deck_sample.json
tutorials/: Spinbot tutorial.ipynb  Synthesis B1 tutorial.ipynb  testing_file.py  testing_ground.py
(+555 files in other folders)
