[build-system]
requires = ["setuptools>=54", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control-lab-ly"
version = "2.0.0-a0"
description = "Lab Equipment Automation Package"
readme = "docs/README.md"
authors = [
    {name="Chang Jie Leong", email="changjie.leong@outlook.com"}
]
license = "MIT"
keywords = [
    "python",
    "lab automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "opencv_python>=4.5.0",
    "pandas>=2.0",
    "parse>=1.20",
    "pyserial>=3.5",
    "PyYAML>=6.0.1",
    "scipy>=1.14"
]

[project.urls]
Homepage = "https://github.com/kylejeanlewis/control-lab-le"
GitHub = "https://github.com/kylejeanlewis/control-lab-le"
Documentation = "https://github.com/kylejeanlewis/control-lab-le/blob/main/docs/README.md"
Changelog = "https://github.com/kylejeanlewis/control-lab-le/blob/main/docs/CHANGELOG.md"
Tracker = "https://github.com/kylejeanlewis/control-lab-le/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "pytest-cov>=2.11",
    "pytest-rerunfailures>=15.0",
    "pytest-xdist>=3.6",
    "tox>=3.24"
]
all = [
    "easy-biologic>=0.4.0",
    "PyMeasure>=0.15",
    "pyModbusTCP>=0.2"
]
ax8 = ["pyModbusTCP>=0.2"]
biologic = ["easy-biologic>=0.4.0"]
keithley = ["PyMeasure>=0.15"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["controllably*", "docs*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.png", "*.md", "*.rst"]


[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "socket: mark test socket connection"
]


[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.10.0
envlist = py310, py311, py312
isolated_build = true

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    -r {toxinidir}/dev/requirements_dev.txt
commands =
    pytest --cov=controllably/core -n auto -m "not socket" --reruns 3 --reruns-delay 1 {posargs}
    pytest -n 1 -m socket --reruns 3 --reruns-delay 1 {posargs}
"""
