[metadata]
name = control-lab-ly
version = 1.4.0-a0
description = Lab Equipment Automation Package
long_description = file: docs/README.md, docs/CHANGELOG.md
long_description_content_type = text/markdown
author = Chang Jie Leong
author_email = changjie.leong@outlook.com
url = https://github.com/kylejeanlewis/control-lab-le
project_urls =
    GitHub = https://github.com/kylejeanlewis/control-lab-le
    Documentation = https://github.com/kylejeanlewis/control-lab-le/blob/main/docs/README.md
    Changelog = https://github.com/kylejeanlewis/control-lab-le/blob/main/docs/CHANGELOG.md
    Tracker = https://github.com/kylejeanlewis/control-lab-le/issues
license = MIT
keywords = 
    python
    lab automation
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    Markdown>=3.3
    matplotlib>=3.9
    numpy>=2.0
    opencv_python>=4.5.0
    pandas>=1.2
    parse>=1.20
    PyMeasure>=0.15
    pyModbusTCP>=0.2
    pyserial>=3.5
    PySimpleGUI~=4.60
    PyVISA>=1.12
    PyVISA-py>=0.7
    PyYAML>=6.0
    scipy>=1.14
    tkhtmlview>=0.2
zip_safe = False

[options.packages.find]
where = src
exclude = tests

[options.package_data]
* = *.json, *.yaml, *.png
controllably = py.typed

[options.extras_require]
testing =
    mypy>=0.910
    pytest>=6.2
    pytest-cov>=2.11
    tox>=3.24